# MineVally

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MineVally  README.md  Readme.md  build.gradle  cmake_install.cmake  glad.c  gradle.properties  imgui.ini  run.sh
.github/workflows/: c-cpp.yml
android/: AndroidManifest.xml  build.gradle  settings.gradle
android/app/: build.gradle
android/res/values/: strings.xml
assets/: atlas.atlas  frag.glsl  vert.glsl
builtin/mainmenu/: init.lua  tab_about.lua  tab_local.lua
core/: build.gradle
games/shadow_forest/: .gitattributes  LICENSE.txt  LICENSE_MEDIA.txt  README.md  game.conf
games/shadow_forest/mods/playerphysics/: README.md
games/shadow_forest/mods/sf_commands/: init.lua  mod.conf
games/shadow_forest/mods/sf_darkness/: init.lua  mod.conf
games/shadow_forest/mods/sf_default_textures/: init.lua  mod.conf
games/shadow_forest/mods/sf_dialog/: init.lua  mod.conf
games/shadow_forest/mods/sf_doors/: init.lua  mod.conf
games/shadow_forest/mods/sf_editor/: init.lua  mod.conf
games/shadow_forest/mods/sf_events/: init.lua  mod.conf
games/shadow_forest/mods/sf_foliage/: init.lua  mod.conf
games/shadow_forest/mods/sf_footsteps/: init.lua  mod.conf
games/shadow_forest/mods/sf_force_time/: init.lua  mod.conf
games/shadow_forest/mods/sf_formspec/: init.lua  mod.conf
games/shadow_forest/mods/sf_game_meta/: mod.conf
games/shadow_forest/mods/sf_hand/: init.lua  mod.conf
games/shadow_forest/mods/sf_health/: init.lua  mod.conf
games/shadow_forest/mods/sf_hud/: init.lua  mod.conf
games/shadow_forest/mods/sf_initial_items/: init.lua  mod.conf
games/shadow_forest/mods/sf_inventory/: init.lua  mod.conf
games/shadow_forest/mods/sf_loot/: init.lua  mod.conf
games/shadow_forest/mods/sf_mapgen_aliases/: init.lua  mod.conf
games/shadow_forest/mods/sf_messages/: init.lua  mod.conf
include/glad/: glad.h
lwjgl3/: build.gradle
src/: callbacks.cpp  callbacks.h  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  frustum.cpp  frustum.hpp  glad.c  global.cpp  global.hpp  main.cpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  shader.cpp  shader.hpp  world.cpp  world.hpp
src/ui/: ui.cpp  ui.hpp
(+1569 files in other folders)
